# rubypit_native

./: CMakeLists.txt  LICENSE  README.md  tree-sitter-ruby.cpp  tree-sitter-ruby.h
src/: java_interop.cc  java_interop.h  tree-sitter-ruby.cc  tree-sitter-ruby.h
tree-sitter/: tree-sitter.lib
