CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT(rubypit)

SET(CMAKE_CXX_STANDARD 14)

FIND_PACKAGE(JNI)

IF (NOT (JNI_FOUND))
	MESSAGE(FATAL_ERROR "Unable to locate JNI headers")
ENDIF ()

ADD_LIBRARY(tree-sitter STATIC IMPORTED)
IF (MSVC)
	SET_TARGET_PROPERTIES(tree-sitter PROPERTIES
			IMPORTED_LOCATION "${PROJECT_SOURCE_DIR}/tree-sitter/tree-sitter.lib"
			INTERFACE_INCLUDE_DIRECTORIES "${PROJECT_SOURCE_DIR}/tree-sitter/include/"
			)
ELSE ()
	SET_TARGET_PROPERTIES(tree-sitter PROPERTIES
			IMPORTED_LOCATION "${PROJECT_SOURCE_DIR}/tree-sitter/libtree-sitter.a"
			INTERFACE_INCLUDE_DIRECTORIES "${PROJECT_SOURCE_DIR}/tree-sitter/include/"
			)
ENDIF ()

FILE(GLOB PROJECT_CC_SOURCE_FILES "${PROJECT_SOURCE_DIR}/src/*.cc")
FILE(GLOB PROJECT_C_SOURCE_FILES "${PROJECT_SOURCE_DIR}/src/*.c")
FILE(GLOB PROJECT_HEADER_FILES "${PROJECT_SOURCE_DIR}/src/*.h")

ADD_LIBRARY(rubypit SHARED ${PROJECT_CC_SOURCE_FILES} ${PROJECT_C_SOURCE_FILES} ${PROJECT_HEADER_FILES})
TARGET_LINK_LIBRARIES(rubypit tree-sitter)
TARGET_INCLUDE_DIRECTORIES(rubypit PUBLIC ${JNI_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR})
